--- a/test.html
+++ b/test.html
@@ -9,6 +9,9 @@
         <button data-role="play">play</button>
         <button data-role="pause">pause</button>
       </div> 
+      <button data-role="share" 
+        data-share-url="facebook.com" 
+        data-share-title="article">share</button>
     </div>
     <div id="qunit"></div>
   </body>
@@ -18,6 +21,23 @@
  <script src="qunit-1.9.0.js"></script>
  <script src="dataroles.js"></script>
   <script>
+    var sharingButton = $.findByRole("share");
+    var sharingButton = new SharingButton("share");
+
+    function SharingButton(role) {
+      this.$root = $.findByRole(role);
+      var data = this.$root.data();
+      this.options = {};
+      for (var key in data)
+      {
+        if (key.indexOf(role+"-") > -1)
+          this.options[key.replace(role+"-", "")] = data[key];
+      } 
+      this.$subControls = this.$root.find("[data-role]")
+        .filter(function(el) { return el.role().indexOf(role) > -1; });
+
+    }
+
     var thing = $.findByRole("thing");
     var thing2 = $("body").findByRole("thing");
     console.log(thing.role());
